<resources>
    <string name="app_name">Milam</string>
    <string name="welcomeMessage">¡Bienvenid@!</string>
    <string name="welcomeMessage2">¿Quién va a jugar hoy?</string>
    <string name="profilePic">profile</string>
    <string name="imNotHere">No estoy yo</string>
    <string name="dummy_user">Alex</string>
    <string name="minigames_screen">Pantalla de minijuegos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="encuentra_el_n_mero">Encuentra el número</string>
    <string name="dummyUsername2">Juan</string>
    <string name="puntaje_m_ximo_35">Puntaje máximo 35</string>
    <string name="nivel_5">Nivel 5</string>
    <string name="_5">5</string>
    <string name="_2_5">2+5 =</string>
    <string name="_4">4</string>
    <string name="_7">7</string>
    <string name="_3">3</string>
    <string name="dash_line">_____</string>
    <string name="_20">20</string>
    <string name="_12">12</string>
    <string name="_9">9</string>
    <string name="nivel_12">Nivel 12</string>
    <string name="encuentra_la_letra">Encuentra la letra</string>
    <string name="todo">TODO</string>
    <string name="y">Y</string>
    <string name="e">E</string>
    <string name="a">A</string>
    <string name="n">N</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="f">F</string>
    <string name="c">C</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="j">J</string>
    <string name="m">M</string>
    <string name="w">W</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="v">V</string>
    <string name="l">L</string>
    <string name="game1">Memorama</string>
    <string name="game2">Letras ocultas</string>
    <string name="game3">Laberinto</string>
    <string name="game4">Pixarte</string>
    <string name="game5">Número mágico</string>
    <string name="game6">Simón dice</string>
    <string name="description1">Encuentra la pareja de cada tarjeta</string>
    <string name="description2">Descubre todas las letras ocultas</string>
    <string name="description3">Localiza la salida del laberinto</string>
    <string name="description4">Colorea el dibujo pixel por pixel</string>
    <string name="description5">Suma y encuentra el resultado</string>
    <string name="description6">Escucha el orden de los colores</string>
    <string name="play">Jugar</string>
    <string name="username_input_hint">Introduce tu nombre aquí</string>
    <string name="new_username_label">¿Cómo te llamas?</string>
    <string name="next_label">Siguiente</string>
    <string name="back_level">Regresar</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="settings">Ajustes</string>
    <string name="choose_icon">¡Elige tu icono!</string>
    <string name="save">Guardar</string>
    <string name="hi_message">¡Hola de nuevo, Alex!</string>
    <string name="wanna_play">¿Qué quieres jugar hoy?</string>
    <string name="minigames">Minijuegos</string>
    <string name="progress">Progreso</string>
    <string name="profile">Mi perfil</string>
    <string name="red">rojo</string>
    <string name="green">verde</string>
    <string name="yellow">amarillo</string>
    <string name="blue">azul</string>
    <string name="level">Nivel 1</string>
    <string name="help">Ayuda</string>
    <string name="initial_score">Puntuación actual: 0</string>
    <string name="high_score">Puntaje más alto:</string>
    <string name="pix_art">Selecciona un color dependiendo de su número, pinta las casillas con ese número y descubre la figura oculta.</string>
    <string name="letters">Busca dentro de la sopa de letra las letras que sean iguales a la que te pide el juego. ¡Una vez que encuentres todas habrás ganado!</string>
    <string name="memo">Voltea una tarjeta, busca su pareja y repite esto hasta ganar. (Si aparentemente no hay más tarjetas, arrastra hacia abajo el juego de memorama. ¡Puede haber tarjetas ocultas!)</string>
    <string name="magic_number"> Da click sobre el número que sea la solución al problema. ¡Mientras más ejercicios resuelvas, más difíciles serán las preguntas!</string>
    <string name="maze"> ¡Tú controlas la pelota con tu celular! Mueve tu celular para mover la pelota y encuentra la salida del laberinto.</string>
    <string name="simon_says"> Escucha lo que dice Simón y repite la secuencia. ¡Por cada secuencia que tengas correcta simón agregará un nuevo botón al azar!</string>
    <string name="log_in">Inicio de sesión</string>
    <string name="log_in_help">Presiona tu perfil si está en la lista, si no presion el botón "No estoy yo" para crear tu propio perfil</string>
    <string name="has_completado_este_nivel">Has completado este nivel</string>
    <string name="felicidades">¡FELICIDADES!</string>
</resources>