<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#74CFD0"
    android:theme="@style/Profiles"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeMessage"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        android:fontFamily="@font/lato_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.194" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeMessage2"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:fontFamily="@font/lato_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.051" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card2"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_margin="8dp"
        app:cardBackgroundColor="#6D8586"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.15">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Media -->

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:contentDescription="@string/profilePic"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/pikachu"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dummy_user"
                android:fontFamily="@font/lato_black"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shapes"
        android:text="@string/imNotHere"
        android:fontFamily="@font/lato_black"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_margin="8dp"
        app:cardBackgroundColor="#6D8586"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.15">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Media -->

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:contentDescription="@string/profilePic"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/snorlax"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dummyUsername2"
                android:fontFamily="@font/lato_black"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/about_Button"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@drawable/about_button_style"
        android:gravity="center"
        app:backgroundTint="@color/aboutButtonGrey"
        app:icon="@drawable/about_icon"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.748" />


</androidx.constraintlayout.widget.ConstraintLayout>